2006-01-23  Joerg Wunsch <j@uriah.heep.sax.de>

	* configure.in: Bump version.

2006-01-17 Colin O'Flynn <coflynn@newae.com>
    * main.c: Fixed a typo in safemode variable names, fixed bug 15113
    * avrdude.conf.in : Added BS2 and pagel to M162, Patch 4766
    * main.c, stk500v2.c: Added patch 4804 from eolson@mit.edu
                          Which stops sck from being writtend needlessly

2006-01-13  Joerg Wunsch <j@uriah.heep.sax.de>

	Contributed by David Moore: add support for the
	AVRISP mkII device. (Savannah patch #4789.)
	* serial.h: Declare usb_serdev_frame device descriptor.
	* stk500v2.c: Implementation of the AVRISP mkII handling.
	* usb_libusb.c: Add USB handling for short-frame delimited
	AVRISP mkII USB protocol; add distinction of different
	devices in usbdev_open().
	* jtagmkII.c: Tell usbdev_open() to search for the JTAG ICE mkII.
	* usbdevs.h: (New file.)
	* Makefile.am: Add usbdevs.h, as well as some other forgotten
	files "make distcheck" complained about.
	* avrdude.conf.in: Add more aliases for the AVRISP mkII.
	* avrdude.1: Document how to use the AVRISP mkII.
	* doc/avrdude.texi: (Ditto.)

2006-01-12  Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Add EEPROM page instructions for the
	ATmega169 so it will work for STK500v2.

2005-12-16  Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Added support for ATtiny24/44/84.

2005-12-05  Colin O'Flynn <coflynn@newae.com>

	* avrdude.conf.in: Added m162 support for stk500v2

2005-12-01  Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: fix the number of significant bits for
	the efuse memory in ATmega48/88/168; the datasheet is a bit
	off here as well.

2005-11-29  Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.1: update for JTAG ICE mkI support.
	* doc/avrdude.texi: (Ditto.)

2005-11-29  Joerg Wunsch <j@uriah.heep.sax.de>

	Submitted by Galen Seitz:
	patch #4459: Fix for rpm package builds
	* avrdude.spec.in: update the RPM spec file: