@@ -1,3 +1,8 @@
+2006-02-21  Joerg Wunsch <j@uriah.heep.sax.de>
+
+	* avrdude.conf.in: Fix paged flash write for AT90PWMx
+	(error in datasheet).
+
 2006-01-23  Joerg Wunsch <j@uriah.heep.sax.de>
 
 	* configure.in: Bump version.
